@@ -100,13 +100,13 @@ public interface DatabaseType {
 	 * Return the DataPersister to associate with the DataType. This allows the database instance to convert a field as
 	 * necessary before it goes to the database.
 	 */
-	public DataPersister getDataPersister(DataPersister defaultPersister);
+	public DataPersister getDataPersister(DataPersister defaultPersister, FieldType fieldType);
 
 	/**
 	 * Return the FieldConverter to associate with the DataType. This allows the database instance to convert a field as
 	 * necessary before it goes to the database.
 	 */
-	public FieldConverter getFieldConverter(DataPersister dataType);
+	public FieldConverter getFieldConverter(DataPersister dataType, FieldType fieldType);
 
 	/**
 	 * Return true if the database supports the width parameter on VARCHAR fields.
