@@ -1,0 +1,18 @@
+#
+# NOTE: we have to use this because spring requires it be available otherwise spring tests fail
+#
+
+log4j.rootLogger=INFO, stdout
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+
+# Print the date in ISO 8601 format
+log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} [%p] %c{1} %m%n
+
+# Be more verbose with our code
+log4j.logger.com.j256.ormlite=INFO
+log4j.logger.com.j256.ormlite.stmt.mapped.BaseMappedStatement=TRACE
+log4j.logger.com.j256.ormlite.stmt.mapped.MappedCreate=TRACE
+log4j.logger.com.j256.ormlite.stmt.StatementExecutor=TRACE
+log4j.logger.com.j256.ormlite.jdbc.JdbcDatabaseConnection=TRACE
